--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2021-10-01-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2021-10-01-preview/appconfiguration.json
@@ -1614,7 +1614,11 @@
         },
         "contentType": {
           "description": "The content type of the key-value's value.\r\nProviding a proper content-type can enable transformations of values when they are retrieved by applications.",
-          "type": "string"
+          "type": "string",
+          "x-ms-mutability": [
+            "create",
+            "update"
+          ]
         },
         "eTag": {
           "description": "An ETag indicating the state of a key-value within a configuration store.",
